Additional of logos and work history sections

--- a/resume.html
+++ b/resume.html
@@ -119,7 +119,7 @@
                             <div class="col-sm-4">
                                 <div class="pwj-card">
                                     <div class="pwj-card-header">
-                                        <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/devmountain.png"></a>
+                                        <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/liberty.png"></a>
                                     </div>
                                     <div class="pwj-card-content">
                                         <h3>Liberty University</h3>
@@ -132,7 +132,7 @@
                             <div class="col-sm-4">
                                 <div class="pwj-card">
                                     <div class="pwj-card-header">
-                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/pluralsight.png"></a>
+                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/luo.png"></a>
                                     </div>
                                     <div class="pwj-card-content">
                                         <h3>Liberty University</h3>
@@ -145,7 +145,7 @@
                             <div class="col-sm-4">
                                 <div class="pwj-card">
                                     <div class="pwj-card-header">
-                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/udemy.png"></a>
+                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/stockdale.png"></a>
                                     </div>
                                     <div class="pwj-card-content">
                                         <h3>Stockdale High School</h3>
@@ -156,6 +156,98 @@
                                 </div>
                             </div>
                         </div>
+
+<!-- Work History Section -->
+        <div class="col-sm-12">
+            <div class="headings">
+                <h2 align="center">Work History</h2>
+                <section id="projects" class="projects section">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="pwj-card">
+                                    <div class="pwj-card-header">
+                                        <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/blackdiamond.png"></a>
+                                    </div>
+                                    <div class="pwj-card-content">
+                                        <h3>Black Diamond Realty</h3>
+                                        <p>
+                                          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="pwj-card">
+                                    <div class="pwj-card-header">
+                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/jordanschool.png"></a>
+                                    </div>
+                                    <div class="pwj-card-content">
+                                        <h3>Jordan School District</h3>
+                                        <p>
+                                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="pwj-card">
+                                    <div class="pwj-card-header">
+                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/saltlakeschooldistrict.png"></a>
+                                    </div>
+                                    <div class="pwj-card-content">
+                                        <h3>Salt Lake School District</h3>
+                                        <p>
+                                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="pwj-card">
+                                    <div class="pwj-card-header">
+                                        <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/crengland.png"></a>
+                                    </div>
+                                    <div class="pwj-card-content">
+                                        <h3>C.R. England</h3>
+                                        <p>
+                                          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="pwj-card">
+                                    <div class="pwj-card-header">
+                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/uta.png"></a>
+                                    </div>
+                                    <div class="pwj-card-content">
+                                        <h3>Utah Transit Authority</h3>
+                                        <p>
+                                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="pwj-card">
+                                    <div class="pwj-card-header">
+                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/stockdale.png"></a>
+                                    </div>
+                                    <div class="pwj-card-content">
+                                        <h3>CCS School</h3>
+                                        <p>
+                                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+
+
+
+
                         <div class="blockquote mt80">
                             <h2>Statement of Passion</h2>
                             <p>
