Final sections added

--- a/resume.html
+++ b/resume.html
@@ -167,10 +167,10 @@
                             <div class="col-sm-4">
                                 <div class="pwj-card">
                                     <div class="pwj-card-header">
-                                        <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/blackdiamond.png"></a>
+                                        <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/kellerwilliams.png"></a>
                                     </div>
                                     <div class="pwj-card-content">
-                                        <h3>Black Diamond Realty</h3>
+                                        <h3>Keller Williams Realty</h3>
                                         <p>
                                           Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
                                         </p>
@@ -193,32 +193,6 @@
                             <div class="col-sm-4">
                                 <div class="pwj-card">
                                     <div class="pwj-card-header">
-                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/saltlakeschooldistrict.png"></a>
-                                    </div>
-                                    <div class="pwj-card-content">
-                                        <h3>Salt Lake School District</h3>
-                                        <p>
-                                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="pwj-card">
-                                    <div class="pwj-card-header">
-                                        <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/crengland.png"></a>
-                                    </div>
-                                    <div class="pwj-card-content">
-                                        <h3>C.R. England</h3>
-                                        <p>
-                                          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="pwj-card">
-                                    <div class="pwj-card-header">
                                         <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/uta.png"></a>
                                     </div>
                                     <div class="pwj-card-content">
@@ -229,24 +203,34 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- <div class="col-sm-4">
+                                <div class="pwj-card">
+                                    <div class="pwj-card-header">
+                                        <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/saltlakeschooldistrict.png"></a>
+                                    </div>
+                                    <div class="pwj-card-content">
+                                        <h3>Salt Lake School District</h3>
+                                        <p>
+                                          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-sm-4">
                                 <div class="pwj-card">
                                     <div class="pwj-card-header">
-                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/stockdale.png"></a>
+                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/crengland.png"></a>
                                     </div>
                                     <div class="pwj-card-content">
-                                        <h3>CCS School</h3>
+                                        <h3>CR England</h3>
                                         <p>
                                             Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
                                         </p>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
+                          </div>
                         </div>
-                        </div>
-
-
-
 
                         <div class="blockquote mt80">
                             <h2>Statement of Passion</h2>
