resumestyle.css added to deal with styles not addressed in style.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Programming with Justin</title>
-    <link rel="icon" type="image/ico" href="./images/favicon2.ico" />
+    <link rel="icon" type="image/ico" href="./images/favicon2.ico"/>
     <!-- Meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -263,7 +263,7 @@
                             <div class="pwj-card-content">
                                 <h3>Your Technology</h3>
                                 <p>
-                                   No matter what direction your growing business is headed technologically, I can quickly and efficiently learn these emerging languages, frameworks, and libraries to help your team get there.
+                                   No matter what direction your growing business is headed technologically, I can quickly and efficiently learn these emerging languages, frameworks, and libraries to help your team reach your goals.
                                 </p>
                             </div>
                         </div>
