--- a/resume.html
+++ b/resume.html
@@ -9,12 +9,14 @@
 
 <!-- CSS -->
         <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo-icon.png"/>
+        <link rel="icon" type="image/ico" href="./images/favicon2.ico"/>
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <link href="./css/bootstrap-theme.min.css" rel="stylesheet">
         <link href="./css/owl.carousel.css" rel="stylesheet">
         <link href="./css/owl.theme.default.min.css" rel="stylesheet">
         <link href="./css/magnific-popup.css" rel="stylesheet">
         <link href="./css/style.css" rel="stylesheet">
+        <link href="./css/resumestyle.css" rel="stylesheet">
     </head>
 
 <!-- Header and Menu -->
@@ -58,7 +60,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h1  class="title mt80" align="center">Resume</h1>
+            <h1 align="center">Resume</h1>
         </div>
 
 <!-- Programming Education Section -->
@@ -114,7 +116,7 @@
             <div class="headings">
                 <h2 align="center">Formal Education</h2>
                 <section id="projects" class="projects section">
-                    <div class="container">
+                     <div class="container">
                         <div class="row">
                             <div class="col-sm-4">
                                 <div class="pwj-card">
