Copy added to Graphic Design section

--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
                         <div></div>
                     </div>
                     <div class="col-sm-5 section">
-                        <h2 class="title">Professional Design</h2>
+                        <h2 class="title">Graphic Design</h2>
                         <div id="expert-slider" class="owl-carousel">
                             <div class="item">
                                 <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                  In addition to professional, cutting-edge web design, I am also able to hand-craft custom logos and graphic designs.
                                 </p>
                             </div>
                             <div class="item">
                                 <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                  This means that projects can be conceptulized or completed in a much quicker time frame because work can be done within the same department, or at the same desk.
                                 </p>
                             </div>
                         </div>
