Addition of quote and other copy. Plus, additional images.

--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <img class="quote" src="assets/images/quote.png">
+                        <!-- <img class="quote" src="./images/"> -->
                        <p>
-                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.                       </p>
-                       <p class="author">Jim Rohn</p>
-                       <img src="assets/images/mouse.png">
+                         "Clean code is not written by following a set of rules. You don’t become a software craftsman by learning a list of heuristics. Professionalism and craftsmanship come from values that drive disciplines."</p>
+                       <p class="author">Robert C. Martin, author of Clean Code: A Handbook of Agile Software Craftsmanship</p>
+                       <!-- <img src="assets/images/mouse.png"> -->
                     </div>
                 </div>
             </div>
@@ -274,7 +274,7 @@
 
 <!-- Showreel Section -->
 
-        <section class="watch bg-img">
+        <!-- <section class="watch bg-img">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
@@ -284,7 +284,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 <!-- Articles Section -->
 
@@ -295,7 +295,7 @@
                     <div class="col-sm-4">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <img class="img-responsive" src="assets/images/8.jpg">
+                                <img class="img-responsive" src="./images/2.jpg">
                             </div>
                             <div class="pwj-card-content">
                                 <h3>Top's Big Question:</h3>
@@ -357,7 +357,7 @@
 
 <!-- Email Contact Section -->
 
-        <section class="subscribe section bg-img">
+        <section class="email section bg-img">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
