--- a/resume.html
+++ b/resume.html
@@ -237,7 +237,7 @@
                         <div class="blockquote mt80">
                             <h2>Statement of Passion</h2>
                             <p>
-                                Successful people do what unsuccessful people are not willing to do. Don't wish it were easier; wish you were better.
+                                To me, writing code and developing elegant solutions for complex challenges are not the whole of the pursuit, but rather the vehicle which turns passion into the means of acheiving one’s dream, both professionally and personally.
                             </p>
                         </div>
 
@@ -246,7 +246,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
-                            <p>Crafted by<a href="https://www.wasatchriver.com">Wasatch River Web Design</a></p>
+                            <p>Crafted by <a href="https://www.wasatchriver.com">Wasatch River Web Design</a></p>
                         </div>
                     </div>
                 </div>
