Border fixes on resume.html and removal of footer.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div class="intro">
                             <h1 id="maintitle">Programming with Justin</h1>
                             <p style="font-size:130%;">An adventure in coding and the creative process</p>
-                            <a class="btn pwj-btn" href="elements.html">About me</a>
+                            <a class="btn pwj-btn" href="resume.html">Resume</a>
                         </div>
                     </div>
                 </div>
