--- a/resume.html
+++ b/resume.html
@@ -242,7 +242,7 @@
                         </div>
 
 <!-- Footer Section -->
-            <!-- <footer class="footer">
+            <footer class="footer">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
@@ -250,7 +250,7 @@
                         </div>
                     </div>
                 </div>
-            </footer> -->
+            </footer>
         </div>
 
         <script src="./js/jquery-3.1.1.js"></script>
