Removed unused html files. Added more copy to resume section.

--- a/resume.html
+++ b/resume.html
@@ -78,8 +78,7 @@
                                     <div class="pwj-card-content">
                                         <h3>DevMountain Full Stack</h3>
                                         <p>
-                                          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                                        </p>
+Graduated Cohort 12 of DevMountain’s Full Stack Web Development program. Studied under mentors such as Jeremy Robertson (Yoodlize, DevMountain, Jane.com), Ben Callis (SimpleNexus, Domo, Jane.com), and Ryan Hamblin (Lambda School, Nokē).                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -92,7 +91,8 @@
                 <div class="pwj-card-content">
                     <h3>Pluralsight</h3>
                     <p>
-                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                      Completed Pluralsight courses such as CSS Positioning, AngularJS: Getting Started, AngularJS: The Big Picture, and React.js: Getting Started.
+                      Currently studing Data Science.
                     </p>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                 <div class="pwj-card-content">
                     <h3>Udemy</h3>
                     <p>
-                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                      Udemy has been my platform for learning all aspect of Python and Django backend development. Completed Complete Python Bootcamp and Python and Django Full Stack Bootcamp by Jose Portilla. Currently studying Computer Science on Udemy.
                     </p>
                 </div>
             </div>
@@ -126,7 +126,8 @@
                                     <div class="pwj-card-content">
                                         <h3>Liberty University</h3>
                                         <p>
-                                          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                          Master's of Arts, 2010<br/>
+                                          Master's of Arts, 2011
                                         </p>
                                     </div>
                                 </div>
@@ -139,7 +140,7 @@
                                     <div class="pwj-card-content">
                                         <h3>Liberty University</h3>
                                         <p>
-                                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                          Bachelor's of Science, 2009
                                         </p>
                                     </div>
                                 </div>
@@ -151,8 +152,7 @@
                                     </div>
                                     <div class="pwj-card-content">
                                         <h3>Stockdale High School</h3>
-                                        <p>
-                                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        <p>Graduated 2000
                                         </p>
                                     </div>
                                 </div>
@@ -174,7 +174,7 @@
                                     <div class="pwj-card-content">
                                         <h3>Keller Williams Realty</h3>
                                         <p>
-                                          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                          Realtor
                                         </p>
                                     </div>
                                 </div>
@@ -187,7 +187,7 @@
                                     <div class="pwj-card-content">
                                         <h3>Jordan School District</h3>
                                         <p>
-                                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                          Transportation Department
                                         </p>
                                     </div>
                                 </div>
@@ -200,7 +200,7 @@
                                     <div class="pwj-card-content">
                                         <h3>Utah Transit Authority</h3>
                                         <p>
-                                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                          Assistant Manager of Rail Operations
                                         </p>
                                     </div>
                                 </div>
